<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/registration_Activity_header_height"
        app:srcCompat="@drawable/hand2handlogo"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <com.example.hand2hand.utility.MSPTextViewBold
        android:id="@+id/registerHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        android:text="@string/registerRegister"
        android:textSize="@dimen/registration_Activity_Register_Button">
    </com.example.hand2hand.utility.MSPTextViewBold>
    <LinearLayout
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerHeading"
        android:orientation="vertical">
        <com.example.hand2hand.utility.H2HEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/firstName">
        </com.example.hand2hand.utility.H2HEditText>
        <com.example.hand2hand.utility.H2HEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/lastName">
        </com.example.hand2hand.utility.H2HEditText>
        <com.example.hand2hand.utility.H2HEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/phone">
        </com.example.hand2hand.utility.H2HEditText>
        <com.example.hand2hand.utility.H2HEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/EmailRegistration">
        </com.example.hand2hand.utility.H2HEditText>
        <com.example.hand2hand.utility.H2HEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/Nickname">
        </com.example.hand2hand.utility.H2HEditText>
        <com.example.hand2hand.utility.H2HEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/Address">
        </com.example.hand2hand.utility.H2HEditText>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/loginRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputField" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <com.example.hand2hand.utility.MSPTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerLogin">

        </com.example.hand2hand.utility.MSPTextViewRegular>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>