<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityLogin">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_activity_header_height"
        app:layout_constraintBottom_toTopOf="@+id/MSPTextViewBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/hand2handlogo" />

    <com.example.hand2hand.utility.MSPTextViewBold
        android:id="@+id/MSPTextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN_text"
        android:textSize="@dimen/login_activity_LOGIN_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265">

    </com.example.hand2hand.utility.MSPTextViewBold>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MSPTextViewBold">

        <com.example.hand2hand.utility.H2HEditText
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="25dp"
            android:hint="@string/loginEmail"
            android:text=""
            android:textSize="@dimen/login_activity_email_password_column_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.example.hand2hand.utility.H2HEditText
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="56dp"
            android:layout_marginRight="25dp"
            android:hint="@string/loginPassword"
            android:text=""
            android:textSize="@dimen/login_activity_email_password_column_size">

        </com.example.hand2hand.utility.H2HEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/LOGIN_text"
        app:layout_constraintBottom_toTopOf="@+id/login_register_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/login_register_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp">

        <com.example.hand2hand.utility.MSPTextViewRegular
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginNot_registered_yet"
            android:textSize="@dimen/login_activity_not_registered_yet_Register"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="581dp" />

        <com.example.hand2hand.utility.MSPTextViewBold
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gotoRegister"
            android:paddingLeft="5sp"
            android:text="@string/loginRegister"
            android:textSize="@dimen/login_activity_not_registered_yet_Register"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="274dp"
            tools:layout_editor_absoluteY="585dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>